themes/2025/assets/css/style.css
/* https://www.joshwcomeau.com/css/custom-css-reset/ */
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
    html {
        interpolate-size: allow-keywords;
    }
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

p {
    text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-wrap: balance;
}

/* Layout */

body {
    font-family: system-ui, sans-serif;
    max-width: 700px;
    margin: 0 auto;
    padding: 0 10px;
}

header {
    margin: 40px 0 25px 0;
    display: grid;
    gap: 20px;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;

    h1 {
        grid-column: 1 / 2;
        grid-row: 1 / 2;
    }

    nav {
        grid-column: 1 / 2;
        grid-row: 2 / 2;
        justify-self: start;
    }

    div {
        grid-column: 2 / 3;
        grid-row: 1 / 2;
        justify-self: end;
        align-self: end;
    }
}

footer {
    margin: 50px 0 25px;
}

/* Colors */

html {
    --light: #fefefe;
    --dark: rgb(28, 27, 34);
    --less-dark: #333;
    --less-light: #ccc;
    --link-light: #8D1C16;
    --link-dark: #E3564F;

    --text-color: light-dark(var(--dark), var(--light));
    --muted-text-color: light-dark(var(--less-dark), var(--less-light));
    --link-color: light-dark(var(--link-light), var(--link-dark));
}

body {
    background: light-dark(var(--light), var(--dark));
    color: var(--text-color);
}


/* Text */

h1 {
    font-size: 2rem;
    line-height: 1.2;
}

h2 {
    font-size: 1.4rem;
    line-height: 1.3;
    margin: 1.8rem 0 1rem 0;

    &.section {
        font-weight: normal;
    }
}

p {
    margin: 1rem 0;
}

a {
    color: var(--link-color);

    &:hover {
        color: inherit;
        text-decoration: underline;
    }
    &[href^='http']:after {
        content: '↗';
        margin-left: 5px;
        color: rgb(from var(--text-color) r g b / 0.5);
        display: inline-block; /* Removes underline (in some browsers?) */
    }
}

time {
    color: var(--muted-text-color);
}

/* Common elements */

.posts {
    li {
        margin: 5px 0;
    }
    h3 {
        font-size: 1rem;
        font-weight: normal;
        display: inline;
    }

    time {
        font-size: 0.8rem;
        display: inline-block;
        margin: 0;
    }
}

/* Header */

header {
    &>a {
        font-size: 1.2rem;
        text-decoration: none;
        color: inherit;
        font-weight: 500;
    }

    div {
        font-size: 0.8rem;
    }

    label {
        color: var(--muted-text-color);
    }
}

nav ul {
    list-style: none;
    padding: 0;
    display: flex;
    gap: 15px;
}

/* Footer */

footer {
    font-size: 0.9rem;
    color: var(--muted-text-color);
    text-align: center;
}

/* Front page */

.latest-post {
    margin: 15px 0;

    time {
        font-size: 0.9rem;
    }

    time,
    p {
        margin: 5px 0;
    }
}

/* Article */

.summary {
    font-weight: 600;
}

img {
    height: auto;
}

time {
    display: block;
    margin: 1rem 0;
    color: light-dark(var(--less-dark), var(--less-light));
}

figure {
    margin: 1rem 0;

    a {
        display: block;
        border: 1px solid rgb(from var(--text-color) r g b / 0.25);
        padding: 10px;

        &:hover {
            border-color: rgb(from var(--text-color) r g b / 1);
        }
    }

    figcaption {
        font-size: 0.9rem;
        text-align: center;
        margin: 10px 0 1.5rem;
    }
}

